<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Yongjia Huang, Dichong Song, Mingwei Li, Donglin Han, Long Ma,CMPUT301F17T25 CMPUT301, University of Alberta, All Rights Reserved.
  ~ You may use distribut, or modify this code under terms and conditions of the ode of Student Behavior at University of Alberta
  ~ You may find a copy of the license in this project. Otherwise please contact jajayongjia@gmail.com
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/habitAddScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ca.ualberta.cs.opgoaltracker.activity.HabitAddActivity">

        <TextView
            android:id="@+id/textTitleAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_title"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTitleAdd"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textTitleAdd"
            app:layout_constraintLeft_toLeftOf="@+id/editReasonAdd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textReasonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_reason"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/editReasonAdd"
            app:layout_constraintTop_toBottomOf="@+id/textTitleAdd" />

        <EditText
            android:id="@+id/editReasonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textReasonAdd"
            app:layout_constraintLeft_toRightOf="@+id/textReasonAdd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textStartDateAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_start_date"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textReasonAdd" />

        <CalendarView
            android:id="@+id/calendarViewAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textStartDateAdd" />

        <TextView
            android:id="@+id/periodTextAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/habit_period"
            android:textColor="@color/black_overlay"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarViewAdd" />

        <CheckBox
            android:id="@+id/checkBoxMonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxTueAdd"
            app:layout_constraintTop_toBottomOf="@+id/periodTextAdd" />

        <TextView
            android:id="@+id/textMonAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_mon"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxMonAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxMonAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxMonAdd" />

        <CheckBox
            android:id="@+id/checkBoxTueAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxMonAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxMonAdd"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxWedAdd" />

        <TextView
            android:id="@+id/textTueAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_tue"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxTueAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxTueAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxTueAdd" />

        <CheckBox
            android:id="@+id/checkBoxWedAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxTueAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxTueAdd"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxThurAdd" />

        <TextView
            android:id="@+id/textWedAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_wed"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxWedAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxWedAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxWedAdd" />

        <CheckBox
            android:id="@+id/checkBoxThurAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxWedAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxWedAdd"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxFriAdd" />

        <TextView
            android:id="@+id/textThurAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_thur"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxThurAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxThurAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxThurAdd" />

        <CheckBox
            android:id="@+id/checkBoxFriAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxThurAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxThurAdd"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxSatAdd" />

        <TextView
            android:id="@+id/textFriAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_fri"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxFriAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxFriAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFriAdd" />

        <CheckBox
            android:id="@+id/checkBoxSatAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxFriAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxFriAdd"
            app:layout_constraintRight_toLeftOf="@+id/checkBoxSunAdd" />

        <TextView
            android:id="@+id/textSatAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_sat"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxSatAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxSatAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSatAdd" />

        <CheckBox
            android:id="@+id/checkBoxSunAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/checkBoxSatAdd"
            app:layout_constraintLeft_toRightOf="@+id/checkBoxSatAdd"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/textSunAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/habit_sun"
            android:textColor="@color/black_overlay"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/checkBoxSunAdd"
            app:layout_constraintRight_toRightOf="@+id/checkBoxSunAdd"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxSunAdd" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:onClick="buttonCreate"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMonAdd" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>