...
    <string name="habit_tue">Tue.</string>
    <string name="habit_wed">Wed.</string>
    <string name="habit_thur">Thur.</string>
    <string name="habit_fri">Fri.</string>
    <string name="habit_sat">Sat.</string>
    <string name="habit_sun">Sun.</string>
    <string name="create">Create</string>
    <string name="title_activity_habit_detail">HabitDetailActivity</string>
    <string name="save">Save</string>
    <string name="menu_action_about_us">About us</string>
    <string name="menu_action_setting">Setting</string>
    <string name="action_goto_habit">Habit</string>
    <string name="menu_action_habit">Habit</string>
    <string name="menu_action_habitEvent">HabitEvent</string>
    <string name="action_delete">Delete</string>
    <string name="action_goto_news">News</string>
    <string name="title_activity_menu_page">MenuPage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

...
